# s4manager

./: .gitignore  Cargo.toml  Makefile  README.md
example_mod/scripts/: my_script.py
src/: compile.rs  config.rs  decompile.rs  errors.rs  main.rs
