[package]
name = "s4manager"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "s4m"
path = "src/main.rs"

[profile.release]
lto = true
strip = "symbols"
panic = "abort"
opt-level = "z"

[dependencies]
clap = { version = "4.5.20", features = ["derive"]}
tokio = { version = "1.43.0", features = ["full"] }
jsonc-parser = { version = "0.26.2", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
inquire = "0.7.5"
async_zip = { version = "0.0.17", features = ["deflate", "tokio", "tokio-fs"] }